--- a/src/app/feature/welcome/welcome.component.html
+++ b/src/app/feature/welcome/welcome.component.html
@@ -1,8 +1,3 @@
-
 @if (user) {
-  <h1>Welcome</h1>
-  <p>Email: {{ user.email }}</p>
-  <p>Role: {{ user.roles }}</p>
-
-  <button (click)="redirectToLogin()">Log off</button>
+  <app-navbar [user]="user"></app-navbar>
 }
