- Main layout for every view - User list that receive a list of user to be shown - Get the user list and the Usuarios component that uses the main layout and the user list to show the user list

--- a/src/app/feature/administracion/usuarios/usuarios.component.html
+++ b/src/app/feature/administracion/usuarios/usuarios.component.html
@@ -1,2 +1,11 @@
 
-<user-list></user-list>
+<main-layout>
+  <div left>
+    <p>Navegación izquierda</p>
+  </div>
+  <div right>
+    <user-list [users]="users"></user-list>
+  </div>
+</main-layout>
+
+
