# 92cdaab9 - Agregar lista de usuarios en PADMIN para usuarios ADMIN
- Option list to manage user list

--- a/src/app/feature/administracion/usuarios/usuarios.component.html
+++ b/src/app/feature/administracion/usuarios/usuarios.component.html
@@ -1,11 +1,27 @@
 
 <main-layout>
-  <div left>
-    <p>Navegación izquierda</p>
+  
+  <div left class="nav">
+
+    <button mat-raised-button extended (click)="openDialog('add')">
+      Agregar Usuario
+    </button>
+
+    <button mat-raised-button extended (click)="openDialog('search')">
+      Buscar usuario
+    </button>
+
+    <button mat-raised-button extended (click)="openDialog('export')">
+      Exportar usuarios
+    </button>
+
   </div>
+
   <div right>
     <user-list [users]="users"></user-list>
   </div>
+
 </main-layout>
+
 
 
