# 92cdaab9 - Agregar lista de usuarios en PADMIN para usuarios ADMIN
- Button styles to match with navbar

--- a/src/app/feature/administracion/usuarios/usuarios.component.css
+++ b/src/app/feature/administracion/usuarios/usuarios.component.css
@@ -1,9 +1,19 @@
 button {
   width: 100%;
   display: block;
-  margin-bottom: 0.25rem;
+  margin-bottom: 0.75rem;
 }
 
 .nav {
   padding-left: 20px;
+}
+
+.white-button {
+  background-color: #e2e9ef;
+  color: rgb(119, 47, 161);
+  border: 1px solid #ccc; /* Opcional: para darle un borde ligero */
+}
+
+.white-button:hover {
+  background-color: #f0f0f0; /* Color de fondo al pasar el ratón */
 }
