--- a/src/app/feature/administracion/usuarios/usuarios.component.html
+++ b/src/app/feature/administracion/usuarios/usuarios.component.html
@@ -3,15 +3,15 @@
   
   <div left class="nav">
 
-    <button mat-raised-button extended (click)="openDialog('add')">
+    <button mat-raised-button extended (click)="openDialog('add')" class="white-button">
       Agregar Usuario
     </button>
 
-    <button mat-raised-button extended (click)="openDialog('search')">
+    <button mat-raised-button extended (click)="openDialog('search')" class="white-button">
       Buscar usuario
     </button>
 
-    <button mat-raised-button extended (click)="openDialog('export')">
+    <button mat-raised-button extended (click)="openDialog('export')" class="white-button">
       Exportar usuarios
     </button>
 
