--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,15 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+
+.white-button {
+  background-color: white;
+  color: black;
+  border: 1px solid #ccc; /* Opcional: para darle un borde ligero */
+}
+
+.white-button:hover {
+  background-color: #f0f0f0; /* Color de fondo al pasar el ratón */
+}
