- Add Dialog to show user-add component that show the New PADMIN user form - A draft functionality to show new user added to user-list component - Add a dialog control to receive the user to be added - Routes changes just to test the main User admin component but no changes that affect functionality

--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,5 +1,4 @@
-<table mat-table [dataSource]="users" class="mat-elevation-z8">
-
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   <!-- User ID Column -->
   <ng-container matColumnDef="user_id">
     <th mat-header-cell *matHeaderCellDef> Usuario </th>
