# c3d68776 - Eliminar usuarios PADMIN
- confirmation-dialog: Created to be used on confirmation dialogs
- user-add.component: styles changes
- user-list: add delete functionality
- user.service: add funciont for delete request on /api/v1/padmin/users/{userId}

--- a/src/app/feature/navbar/navbar.component.html
+++ b/src/app/feature/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <button (click)="redirectToLogin()" mat-icon-button class="example-icon" aria-label="Log off">
     <mat-icon>logout</mat-icon>
   </button>
-  <a class="navbar-brand" href="#">Polaris Admin</a>
+  <a class="navbar-brand" routerLink="/padmin">Polaris Admin</a>
   <span class="example-spacer"></span>
   <div class="user-email">{{ user.email }} | {{ user.roles }}</div>
 </mat-toolbar>
