--- a/src/app/components/user-add/user-add.component.html
+++ b/src/app/components/user-add/user-add.component.html
@@ -3,7 +3,7 @@
   <div mat-dialog-content>
     <mat-form-field appearance="fill">
       <mat-label>Email</mat-label>
-      <input matInput formControlName="email" placeholder="Enter email" required>
+      <input matInput formControlName="email" placeholder="Enter email">
       <mat-error *ngIf="userForm.get('email')?.hasError('required')">Email is required</mat-error>
       <mat-error *ngIf="userForm.get('email')?.hasError('email')">Enter a valid email</mat-error>
     </mat-form-field>
