--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -45,16 +45,26 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef> Acciones </th>
     <td mat-cell *matCellDef="let user">
+
       <button mat-icon-button color="basic" (click)="editUser(user)">
         <mat-icon>edit</mat-icon>
       </button>
+
       <button mat-icon-button color="basic" (click)="changeStatus(user)">
-        <mat-icon>block</mat-icon>
+        @if(user.status === "active") {
+          <mat-icon>block</mat-icon>
+        } @else {
+          <mat-icon>check</mat-icon>
+        }
       </button>
-      <button mat-icon-button color="warn" (click)="deleteUser(user)">
-        <mat-icon>delete</mat-icon>
-      </button>
-    </td>
+
+      @if(currentRole === "ADM") {
+        <button mat-icon-button color="warn" (click)="deleteUser(user)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      }
+
+    </td> 
   </ng-container>
 
   <!-- Header and Row Declarations -->
