--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -58,7 +58,7 @@
         }
       </button>
 
-      @if(currentRole === "ADM") {
+      @if(currentRole?.includes('ADM') && !user.roles.includes('ROOT')) {
         <button mat-icon-button color="warn" (click)="deleteUser(user)">
           <mat-icon>delete</mat-icon>
         </button>
